<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginBottom="50dp"
    tools:context=".screen.SuccessOrderActivity">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/tick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:textSize="28dp"
        android:textStyle="bold"
        android:text="@string/acti_success_order"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:text="@string/acti_success_order_description"/>

    <Button
        android:id="@+id/btnMyOrders"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_search"
        android:paddingRight="12dp"
        android:textColor="#ffffff"
        android:text="@string/acti_success_order_button_my_order_title"
        android:textStyle="bold" />


</android.widget.LinearLayout>