<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#111211"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:id="@+id/imgSlider"
            android:src="@drawable/welcome_slide_1" />

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/slider_success_order"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:textColor="#FFF"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/slider_description"
            android:textAlignment="center"
            android:textSize="17dp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/btnSlider"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_login"
            android:text="@string/slider_btn_discover"
            android:textSize="16dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>