<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorGray"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProductCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearLayout2">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="#3F3D3D"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="4.5"
            android:orientation="vertical">

            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acti_cart_tv_thanhtien"
                android:textColor="@color/colorGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSumPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acti_cart_tv_sumprice"
                    android:textColor="@color/colorRed"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="Đ"

                    android:textColor="@color/colorRed"
                    android:textSize="22dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acti_cart_tv_freeship"
                android:textColor="@color/colorGray" />

        </LinearLayout>

        <Button
            android:paddingLeft="20dp"
            android:layout_width="0dp"
            android:id="@+id/btnPayment"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="-30dp"
            android:layout_weight="4.5"
            android:background="@drawable/button_white"
            android:drawableRight="@drawable/ic_baseline_play_circle_outline_24"
            android:paddingRight="25dp"
            android:text="@string/acti_cart_btnPayment"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>