<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:background="@drawable/background"
    android:scrollbars="none">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <LinearLayout

            android:id="@+id/liner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eaeaea"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@color/colorBlack">

                    <Button
                        android:id="@+id/btnSearch"
                        android:layout_width="260dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="11dp"
                        android:background="@drawable/button_search"
                        android:drawableLeft="@drawable/ic_search_black_24dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="30dp"
                        android:text="Tìm kiếm sản phẩm"
                        android:textAllCaps="false"
                        android:textColor="#A5A5A5"
                        android:textSize="15dp"
                        android:textStyle="normal" />

                    <ImageButton
                        android:id="@+id/btnCart"
                        android:layout_width="40dp"
                        android:layout_height="38dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1.3"
                        android:background="@drawable/carrt"
                        android:paddingLeft="20dp" />

                    <TextView
                        android:id="@+id/tvNumberInCart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="9.3dp"
                        android:layout_marginRight="26.5dp"
                        android:layout_weight="1"
                        android:text="1"
                        android:textColor="@color/colorTextInCart"
                        android:textStyle="bold" />
                </RelativeLayout>


                <ViewFlipper
                    android:id="@+id/vpSlider"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_centerHorizontal="true"></ViewFlipper>

            </LinearLayout>



            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="#2c3e50"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="DANH MỤC"
                        android:textColor="@color/colorTextInCart"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvMore"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Xem Thêm"
                        android:textColor="#A8A4A4"
                        android:textSize="14dp" />

                </LinearLayout>


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <LinearLayout
                        android:id="@+id/lnWhey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.3"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/whey" />

                        <TextView
                            android:textColor="#FFF"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/home_whey" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lnMass"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="65dp"
                            android:layout_marginTop="-5dp"
                            android:background="@drawable/mass" />

                        <TextView
                            android:textColor="#FFF"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/home_mass" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lnBCAA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/bcaa" />

                        <TextView
                            android:textColor="#FFF"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/home_bcaa" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SUPPLE DEALS"
                    android:textColor="@color/colorBlack"
                    android:textSize="25dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSuppleProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/liner"
            android:layout_margin="8dp">

        </androidx.recyclerview.widget.RecyclerView>
    </TableLayout>
</androidx.core.widget.NestedScrollView>